- attach a session id to each logged event - move the bulk of MetricsService startup to the profile-after-change  notification, so that it can read and write profile prefs. - don't start up all collectors at startup, just the ones we were told to enable. make the collectors handle repeated startup or shutdown calls. - move log flushing from xpcom-shutdown to quit-application to avoid DOM serializer crashes - default to no event limit, if the server doesn't give a limit - avoid a debug warning if there's no config file present at startup

bug 331166, r=marria